test/spec_vectors/simd_f32x4_arith/fail/module_9.wat
(module (func $f32x4.sqrt-arg-empty (result v128) (f32x4.sqrt)))